<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>tms.example</groupId>
    <artifactId>c18onl2022</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>14</maven.compiler.source>
        <maven.compiler.target>14</maven.compiler.target>
        <junit.jupiter.version>5.9.1</junit.jupiter.version>
        <junit.platform.version>1.9.1</junit.platform.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.24</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.12.0</version>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>4.0.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>jstl</groupId>
            <artifactId>jstl</artifactId>
            <version>1.2</version>
        </dependency>
        <dependency>
            <groupId>javax.servlet.jsp</groupId>
            <artifactId>jsp-api</artifactId>
            <version>2.1</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
    <build>
        <defaultGoal>clean package</defaultGoal>
    </build>
    <modules>
        <module>Lesson1</module>
        <module>Lesson2</module>
        <module>Lesson3</module>
        <module>Lesson4</module>
        <module>Lesson5</module>
        <module>Lesson6</module>
        <module>Lesson7</module>
        <module>Lesson8</module>
        <module>tictactoe</module>
        <module>Lesson9</module>
        <module>Lesson8_add</module>
        <module>Lesson10</module>
        <module>Lesson10hw</module>
        <module>Lesson7hw</module>
        <module>Lesson9hw</module>
        <module>Lesson11</module>
        <module>Lesson12</module>
        <module>Lesson11hw</module>
        <module>Lesson12hw</module>
        <module>Lesson10hw2</module>
        <module>Lesson10hw3</module>
        <module>Lesson13</module>
        <module>Lesson14</module>
        <module>Lesson15</module>
        <module>Lesson14hw</module>
        <module>Lesson15hw</module>
        <module>Lesson16</module>
        <module>Lesson17</module>
        <module>Lesson16hw</module>
        <module>Lesson18</module>
        <module>Lesson19</module>
        <module>Lesson20</module>
        <module>Lesson19_add</module>
        <module>Lesson21</module>
        <module>Lesson20add</module>
        <module>Lesson19hw</module>
        <module>Lesson20hw</module>
        <module>Lesson21jdbc</module>
        <module>Lesson22</module>
        <module>Lesson23</module>
        <module>Lesson24web</module>
        <module>Lesson25</module>
        <module>Lesson25filter</module>
        <module>Lesson25all</module>
        <module>Lesson26htmlcss</module>
        <module>Lesson26calc</module>
        <module>Lesson27</module>
        <module>Lesson28</module>
        <module>Lesson28add</module>
        <module>Lesson28dop</module>
        <module>Lesson28hw</module>
        <module>Lesson29</module>
        <module>Lesson30</module>
        <module>Lesson31</module>
        <module>Lesson32allpatterns</module>
    </modules>
</project>